# fiftyone-ha-plugin

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/fiftyone/: __init__.py  api.py  camera.py  config_flow.py  const.py  coordinator.py  image.py  manifest.json  sensor.py
custom_components/fiftyone/translations/: en.json
tests/: conftest.py  test_api.py  test_sensor.py
